fix(stepper): adjustments for width differences
Using component-height-200 instead of component-height-100 was making
the component too much wider than the original. Now uses the stepper
height token, which is using component-height-100 at medium, and
adjustments for t-shirt sizing. This makes the larger sizes like XL
scale more appropriately in their width as well. Previously the
characters entered in the field would turn to ellipsis after 3 chars at
XL size.

Note: Medium version of component -should- be about 6px wider due to
wider in-field buttons, defined in tokens. Original medium was 72px.

Adjusts usage of some of the width tokens so that usage of
--mod-stepper-width and --mod-stepper-border-width will have the desired
effect.

Also needed to add border width to calc, so that 4 chars appear before
ellipsis at medium size, instead of 3. Was a matter of 1 or 2 pixels.

--- a/components/stepper/index.css
+++ b/components/stepper/index.css
@@ -11,17 +11,18 @@ governing permissions and limitations under the License.
 */
 
 .spectrum-Stepper {
-  /* set defaults to medium theme */
-  --spectrum-stepper-width: var(--spectrum-component-height-200);
-  --spectrum-stepper-min-width-multiplier: var(
-		--spectrum-text-field-minimum-width-multiplier
-	);
+  /* Set defaults to medium size */
   --spectrum-stepper-height: var(--spectrum-component-height-100);
   --spectrum-stepper-border-radius: var(--spectrum-corner-radius-100);
 
   --spectrum-stepper-button-width: var(--spectrum-in-field-button-width-stacked-medium);
-
   --spectrum-stepper-button-padding: var(--spectrum-in-field-button-edge-to-fill);
+
+  --spectrum-stepper-width: calc(
+    var(--mod-stepper-height, var(--spectrum-stepper-height)) * var(--mod-stepper-min-width-multiplier, var(--spectrum-text-field-minimum-width-multiplier)) +
+    var(--mod-stepper-button-width, var(--spectrum-stepper-button-width)) +
+    (var(--mod-stepper-border-width, var(--spectrum-stepper-border-width)) * 2)
+  );
 
   /*** Focus Indicator ***/
   --spectrum-stepper-focus-indicator-width: var(--spectrum-focus-indicator-thickness);
@@ -33,8 +34,10 @@ governing permissions and limitations under the License.
 
   --spectrum-stepper-animation-duration: var(--spectrum-animation-duration-100);
 
-  /*** MODS for Infield Button ***/
+  /*** MODS for sub components ***/
   --mod-infield-button-border-color: var(--highcontrast-stepper-border-color, var(--mod-stepper-border-color, var(--spectrum-stepper-border-color)));
+  --mod-infield-button-border-width: var(--mod-stepper-border-width, var(--spectrum-stepper-border-width));
+  --mod-textfield-border-width: var(--mod-stepper-border-width, var(--spectrum-stepper-border-width));
 
   &.spectrum-Stepper--sizeS {
     --spectrum-stepper-button-width: var(--spectrum-in-field-button-width-stacked-small);
@@ -111,7 +114,7 @@ governing permissions and limitations under the License.
   display: inline-flex;
   flex-flow: row nowrap;
 
-  inline-size: calc(var(--mod-stepper-width, var(--spectrum-stepper-width)) * var(--mod-stepper-min-width-multiplier, var(--spectrum-stepper-min-width-multiplier)) + var(--mod-stepper-button-width, var(--spectrum-stepper-button-width)));
+  inline-size: var(--mod-stepper-width, var(--spectrum-stepper-width));
   block-size: var(--mod-stepper-height, var(--spectrum-stepper-height));
   border-radius: var(--mod-stepper-border-radius, var(--spectrum-stepper-border-radius));
   border-color: var(--highcontrast-stepper-border-color, var(--mod-stepper-border-color, var(--spectrum-stepper-border-color)));
